fixed: overflow x scroll on some devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@ html {
 body {
   color: var(--text-color);
   background: var(--primary);
+  overflow-x: hidden;
 }
 
 * {
